--- a/app/globals.css
+++ b/app/globals.css
@@ -15,13 +15,8 @@
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  margin: 0px;
+  padding: 0px;
+  margin-top: 60px;
   font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
