--- a/app/components/SearchBar/SearchBar.module.css
+++ b/app/components/SearchBar/SearchBar.module.css
@@ -10,6 +10,7 @@
 }
 
 .searchIcon {
+  size: 2rem;
   margin-left: 1rem;
   color: #888;
   background-color: transparent;
@@ -24,10 +25,30 @@
   background-color: transparent;
 }
 
+.dropdownContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35%;
+  background-color: rgb(250, 249, 249);
+  border-radius: 1rem;
+  margin-right: 0.5rem;
+}
+
+.filterIcon {
+  color: #888;
+}
+
+.dropdown {
+  font-size: 1.25rem;
+  padding: 0.5rem;
+  background-color: rgb(250, 249, 249);
+  border: none;
+  outline: none;
+}
+
 .button {
   padding: 1rem;
-  padding-left: 1.2rem;
-  padding-right: 1.5rem;
   background-color: #3993f4;
   color: white;
   border: 2px solid #0067d6;
