--- a/app/search/page.module.css
+++ b/app/search/page.module.css
@@ -1,11 +1,15 @@
 .search {
-  height: 80vh;
+  min-height: 80vh;
+  padding: 2rem;
+  width: 100%;
+}
+
+.searchHeader {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  padding: 2rem;
-  width: 100%;
+  justify-content: center;
+  padding: 1rem;
 }
 
 .searchInfo {
@@ -15,7 +19,7 @@
 }
 
 .searchInfo h1 {
-  font-size: 2rem;
+  font-size: 1.5rem;
   text-align: center;
   padding: 1rem;
 }
@@ -29,10 +33,4 @@
   border: 1px solid #22c125;
   color: #ffffff;
   font-size: 1rem;
-}
-
-.searchResults {
-  display: inline-grid;
-  align-items: center;
-  justify-content: center;
 }
