--- a/app/globals.css
+++ b/app/globals.css
@@ -76,3 +76,16 @@ body {
     transform: translate(-50%, -75%) rotate(360deg);
   }
 }
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
+  height: 100%;
+  width: 100%;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background: linear-gradient(135deg, #67ad6a 0%, #68ba6e 40%, #3e8dca 100%);
+}
