--- a/components/CTASearchBar/CTASearchBar.module.css
+++ b/components/CTASearchBar/CTASearchBar.module.css
@@ -10,6 +10,7 @@
 }
 
 .searchIcon {
+  flex-shrink: 0;
   size: 2rem;
   margin-left: 1rem;
   color: #888;
@@ -17,6 +18,7 @@
 }
 
 .input {
+  flex-shrink: 0;
   flex: 1;
   padding: 0.5rem;
   border: none;
@@ -26,6 +28,7 @@
 }
 
 .dropdownContainer {
+  flex-shrink: 0;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -49,6 +52,7 @@
 }
 
 .button {
+  flex-shrink: 0;
   padding: 1.15rem;
   background-color: #3993f4;
   color: white;
@@ -65,4 +69,24 @@
   background-color: #2479d4;
   color: #fbfbfb;
   transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+@media (max-width: 768px) {
+  .searchBar {
+    width: 80vw;
+  }
+
+  .dropdownContainer {
+    width: 40%;
+  }
+}
+
+@media (max-width: 576px) {
+  .searchBar {
+    width: 90vw;
+  }
+
+  .dropdownContainer {
+    width: 35%;
+  }
 }
