--- a/components/CompanyCard/CompanyCard.module.css
+++ b/components/CompanyCard/CompanyCard.module.css
@@ -4,7 +4,6 @@
   align-items: center;
   justify-content: center;
   margin: 1rem;
-  padding: 1rem;
   border: 1px solid #e0e0e0;
   border-radius: 1rem;
   box-shadow: 3px 3px 3px #ede9e9;
@@ -12,18 +11,25 @@
 }
 
 .header {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, #9bea9e, #c4ec97);
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   padding: 1rem;
+  border-radius: 1rem 1rem 0 0;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1), 0 6px 20px rgba(0, 0, 0, 0.1);
 }
 
 .header img {
   margin: 0.5rem;
+  border-radius: 1rem;
 }
 
 .header h1 {
-  font-size: 1.25rem;
+  font-weight: bolder;
+  font-size: 1.15rem;
   text-align: center;
   padding: 1rem;
 }
@@ -34,4 +40,53 @@
   align-items: center;
   justify-content: center;
   padding: 1rem;
+  width: 100%;
+}
+
+.body h2 {
+  font-size: 1rem;
+  text-align: center;
+  padding: 0 1rem;
+  background-color: #e0e0e0;
+  border-radius: 1rem;
+}
+
+.sectionMiddle {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+}
+
+.sectionLeft {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  gap: 1rem;
+}
+
+.sectionRight {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.learnMoreButton {
+  padding: 0.5rem 1rem;
+  background-color: #6fa5e3;
+  color: #fff;
+  border: none;
+  border-radius: 3rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.learnMoreButton:hover {
+  background-color: #005bb5;
 }
