--- a/components/SearchBar/SearchBar.module.css
+++ b/components/SearchBar/SearchBar.module.css
@@ -10,6 +10,7 @@
 }
 
 .searchIcon {
+  flex-shrink: 0;
   size: 2rem;
   margin-left: 1rem;
   color: #888;
@@ -17,6 +18,7 @@
 }
 
 .input {
+  flex-shrink: 0;
   flex: 1;
   padding: 0.5rem;
   border: none;
@@ -26,6 +28,7 @@
 }
 
 .dropdownContainer {
+  flex-shrink: 0;
   display: flex;
   align-items: center;
   justify-content: center;
