--- a/components/NewsCard/NewsCard.module.css
+++ b/components/NewsCard/NewsCard.module.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   width: 100%;
   max-width: 700px;
-  height: auto;
   margin: 1.5rem auto;
   border-radius: 12px;
   overflow: hidden;
@@ -19,8 +18,12 @@
 
 .imageContainer {
   width: 100%;
-  height: 30%;
+  height: 200px;
   overflow: hidden;
+  background-color: #edf2f7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .image {
@@ -29,10 +32,19 @@
   object-fit: cover;
 }
 
+.placeholderImage {
+  color: #a0aec0;
+  font-size: 1rem;
+  font-weight: 500;
+  text-align: center;
+}
+
 .content {
   padding: 1.5rem;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  flex: 1;
 }
 
 .title {
@@ -46,7 +58,6 @@
   margin-bottom: 1rem;
   font-size: 0.9rem;
   color: #718096;
-  line-height: 1.5;
 }
 
 .date {
@@ -55,12 +66,13 @@
 
 .author {
   font-weight: 500;
+  margin-left: 0.5rem;
 }
 
 .description {
   font-size: 1rem;
   color: #4a5568;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
   line-height: 1.5;
 }
 
