--- a/app/login/page.module.css
+++ b/app/login/page.module.css
@@ -44,7 +44,14 @@
   box-shadow: 0 0 3px rgba(255, 126, 95, 0.5);
 }
 
+.form a {
+  color: #ff7e5f;
+  text-decoration: none;
+  font-weight: bold;
+}
+
 .form button {
+  margin-bottom: 0.5rem;
   width: 100%;
   padding: 0.75rem;
   background: linear-gradient(135deg, #ff7e5f, #feb47b);
