--- a/app/community/page.module.css
+++ b/app/community/page.module.css
@@ -120,6 +120,15 @@
   gap: 2rem;
 }
 
+.postsList h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #123565;
+  margin-left: 1.75rem;
+  margin-top: 1rem;
+  margin-bottom: 0.85rem;
+}
+
 .noPosts {
   text-align: center;
   font-size: 1.2rem;
